# vdb

./: .gitignore  Dockerfile  Makefile  README.md  architecture.drawio  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
sql/: get-aggregated-data.sql  get-data.sql  init-db.sql  init-schema.sql
vandebron/: config.py  knmi_edr_scraper.py  model.py  repo.py
